# Integrality-Gap-for-Bin-Packing

./: Bin_Packing  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  arguments.cpp  arguments.h  bp-EA-course.cbp  bpinstance.cpp  bpinstance.h  main.cpp  simpleipsolver.cpp  simpleipsolver.h  simplelpsolver.cpp  simplelpsolver.h  solution.cpp  solution.h  solver.h
src/: AIG_BP.hpp  helper.cpp  helper.h  simpleipsolver.cpp  simpleipsolver.h  simplelpsolver.cpp  simplelpsolver.h  solution.cpp  solution.h  solver.h
